--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello, World!
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#000000">
+    <title>
+      rob-myers
+    </title>
+  </head>
+  <body>
+    <div id="root"/>
+  <script type="text/javascript" src="1.index.js"></script><script type="text/javascript" src="index.js"></script></body>
+</html>
